--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body {
     height: 100px;
     background-color: black;
     border-radius: 15px;
+    color: white;
+    text-align: end;
 }
 
 #keyboard {
@@ -32,7 +34,7 @@ body {
     gap: 2px;
 }
 
-.num {
+.key {
     width: 90px;
     height: 90px;
     font-size: xx-large
